--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "engines": {
     "node": "22.11.0"
   },
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node app",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Stefan-Tudor Popescu",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
